# codexis-marketplace

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  ENV_VARS.md  Makefile  README.md  build.sh  create-dist.sh  dist-exclusions.txt  pyproject.toml
.claude-plugin/: marketplace.json  marketplaces.jsonl
frontend/: .dockerignore  .env.docker.example  .gitignore  README.md  eslint.config.js  package.json  turbo.json
plugins/ares/: README.md  STRUCTURE.md
plugins/codexis/: README.md  SKILL.md
plugins/codexis/src/cdxctl/: Cargo.toml
plugins/codexis/src/cdxctl/src/: client.rs  error.rs  graphql.rs  main.rs  output.rs
plugins/codexis/src/cdxctl/src/commands/: agent.rs  automation.rs  marketplace.rs  mod.rs  notification.rs  notification_email.rs  plugin.rs  skill.rs  tabular.rs
plugins/data-gouv-fr/: .mcp.json
plugins/playwright/: .mcp.json
tests/: _assertions.py  _changed_plugins.py  _chat_runner.py  _daemon_client.py  _output.py  _transcript.py  conftest.py  test-marketplace.py  test-plugin-e2e.py  test_ares_cli.py
tests/promptfoo/: .gitignore  ARBITRATION-NOTES.md  README.md  _arbitration.py  ares-dph.config.yaml  ares-ico.config.yaml  assertions.py  cdx-at-abgb.config.yaml  cdx-at-ogh.config.yaml  cdx-at.config.yaml  cdx-cz-psp.config.yaml  cdx-cz-spp.config.yaml  cdx-sk-oz.config.yaml  cdx-sk-sknus.config.yaml  codexis-cdxctl-agent-crud.config.yaml  codexis-cdxctl-agent-from-file.config.yaml  codexis-cdxctl-automation-ai.config.yaml  codexis-cdxctl-automation-cmd.config.yaml  codexis-cdxctl-automation-update.config.yaml  codexis-cdxctl-marketplace.config.yaml  (+18 more)
(+723 files in other folders)
