[project]
name = "codexis-marketplace"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pyyaml>=6",
    "jsonpath-ng>=1.6",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
python_files = ["test_*.py", "test-*.py"]
addopts = "-ra --import-mode=importlib"
